# tp_c_cpp_iz1

./: .travis.yml  CMakeLists.txt  README.md
include/: input.h  matrix.h  non_zero_matrix.h
src/: input.c  main.c  matrix.c  non_zero_matrix.c
test/: CMakeLists.txt  test.cpp
